[package]
name = "rs-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.2"
solana-sdk = "2.2.2"
spl-associated-token-account = "6.0.0"
spl-token-client = "0.14.0"
spl-token-confidential-transfer-proof-extraction = "0.2.1"
spl-token-confidential-transfer-proof-generation = "0.3.0"
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
# spl-pod = "0.7.1"
# spl-token = "8.0.0"

# spl-token-2022 = "9.0.0"
# spl-token-client = { path = "../token-2022/clients/rust-legacy/" }
# spl-token-confidential-transfer-proof-extraction = { version = "0.4.1", path = "../token-2022/confidential/proof-extraction/" }
# spl-token-confidential-transfer-proof-generation = { version = "0.4.1", path = "../token-2022/confidential/proof-generation/" }
spl-token-2022 = { path = "../token-2022/program/" }

anyhow = "1.0.95"
dirs = "6.0.0"
serde_json = "1.0.135"
tokio = { version = "1.44.2", features = ["full"] }
